--- a/static/css/live_paper.css
+++ b/static/css/live_paper.css
@@ -81,3 +81,40 @@
 	padding: 20px;
 	margin: 20px;
 }
+.panel{
+	margin-top: 10px; 
+	background: white;
+	width: 318px;
+	height: 190px;
+	display: inline-block;
+}
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    width: 150px;
+    padding: 6px 14px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 5px 3px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.button_1{
+    background-color: rgb(226, 230, 234); 
+    color: black; 
+    border: 1px solid rgb(226, 230, 234);
+}
+
+.button_1:hover {
+    background-color: rgb(210, 220, 225);
+    color: black;
+}
+.color_panel{
+    background-color: red;/*rgb(245,245,245,1);*/
+    padding: 20px;
+}
