--- a/static/css/live_paper.css
+++ b/static/css/live_paper.css
@@ -92,10 +92,11 @@
     background-color: #4CAF50; /* Green */
     border: none;
     color: white;
-    width: 310px;
+    width: 150px;
     padding: 6px 14px;
     text-align: center;
     text-decoration: none;
+    display: inline-block;
     font-size: 16px;
     margin: 5px 3px;
     -webkit-transition-duration: 0.4s; /* Safari */
